# make-certificate-chain

./: .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: test.yml
make_certificate_chain/: __init__.py  __main__.py  exceptions.py  solver.py  utils.py  warnings.py
make_certificate_chain/cli/: __init__.py  cli.py  cmd_aws.py  cmd_gcp.py  cmd_get_issuer.py  cmd_list_system_ca.py  cmd_output_only.py  cmd_split_certs.py  cmd_verify_chain.py  cmd_version.py  common.py
tests/: conftest.py  test_cli_output_only.py  test_error.py  test_self_sign.py  test_simple.py  test_utils.py
