[project]
name = "make-certificate-chain"
authors = [
    {name = "Jacky Chen"}
]
description = "Resolve the certificate chain from X.509 PEM or DER Certificate."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities"
]
dependencies = [
    "certifi>=2023.7.22",
    "requests>=2.31.0",
    "cryptography>=40.0.0",
    "click>=8.1.7",
    "boto3>=1.28.69",
    "google-cloud-compute>=1.14.1"
]
dynamic = [
    "version"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "coverage>=7.2.1",
    "semgrep>=1.45.0",
    "pip_audit>=2.6.1"
]

[project.scripts]
mkcertchain = "make_certificate_chain.__main__:main"

[project.urls]
repository = "https://github.com/jacky9813/make-certificate-chain"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "make_certificate_chain.VERSION"}

[tool.setuptools.package-dir]
make_certificate_chain = "make_certificate_chain"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::cryptography.utils.CryptographyDeprecationWarning"
]