[project]
name = "make-certificate-chain"
authors = [
    {name = "Jacky Chen"}
]
description = "Resolve the certificate chain from X.509 PEM or DER Certificate."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities"
]
dependencies = [
    "certifi>=2024.8.30",
    "requests>=2.32.3",
    "cryptography>=44.0.0",
    "click>=8.1.7",
    "boto3>=1.35.75",
    "google-cloud-compute>=1.22.0"
]
dynamic = [
    "version"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "coverage>=7.6.1",
    "pip_audit>=2.7.3"
]

[project.scripts]
mkcertchain = "make_certificate_chain.__main__:main"

[project.urls]
repository = "https://github.com/jacky9813/make-certificate-chain"

[build-system]
requires = [
    "setuptools>=65.0.0",
    "setuptools-scm[toml]>=8.1.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-dir]
make_certificate_chain = "make_certificate_chain"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::cryptography.utils.CryptographyDeprecationWarning"
]