[project]
name = "make-certificate-chain"
authors = [
    {name = "Jacky Chen"}
]
description = "Resolve the certificate chain from X.509 PEM or DER Certificate."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities"
]
dependencies = [
    "boto3>=1.38.31",
    "certifi>=2025.4.26",
    "click>=8.1.8",
    "cryptography>=45.0.3",
    "google-cloud-compute>=1.31.0",
    "requests>=2.32.3",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.8.2",
    "pip_audit>=2.9.0",
    "pytest>=8.4.0",
    "semgrep>=1.124.0; python_version>='3.10' and sys_platform == 'linux'"
]

[project.scripts]
mkcertchain = "make_certificate_chain.__main__:main"

[project.urls]
repository = "https://github.com/jacky9813/make-certificate-chain"

[build-system]
requires = [
    "setuptools>=65.0.0",
    "setuptools-scm[toml]>=8.1.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-dir]
make_certificate_chain = "make_certificate_chain"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::cryptography.utils.CryptographyDeprecationWarning"
]